--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 streamlit==1.32.0
-zhipuai==0.4.1
+zhipuai>=1.0.7
 langchain==0.1.11
 langchain-community==0.0.29
 sentence-transformers==2.2.2
 chromadb==0.4.22
+
 
 
