--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,12 @@
-python-dotenv>=0.19.0
 streamlit==1.32.0
 zhipuai>=1.0.7
+sentence-transformers==2.2.2
 langchain==0.1.11
 langchain-community==0.0.29
-sentence-transformers==2.2.2
 chromadb==0.4.22
-torch>=1.6.0
-transformers>=4.6.0
-
+torch==1.13.1
+transformers==4.26.0
+protobuf==3.20.3
 
 
 
